TestCases/Errors/threaded_movement/observations/sum_01_obs.spm
 obs   9-11   0.121538461538462 
 obs   10-11   0.084375 
 obs   7-12   0.0672916666666667 
 obs   9-12   0.111185897435897 
 obs   7-13   0.0211936177248677 
 obs   8-13   0.0938249559082892 
 obs   9-13   0.0757142857142857 
 obs   8-14   0 
 obs   9-14   0.0282142857142857 
 obs   10-14   0.035 
 obs   6-15   0.0105 
 obs   6-16   0.01125 
 obs   7-16   0.013 
 obs   8-17   0.0026487332470667 
 obs   9-17   0.00800859329242398 
 obs   8-18   0.0042664381512359 
 obs   9-18   0.00735923742272482 
 obs   9-19   0.0101614612465359 
 obs   10-19   0.00990151556520924 
 obs   11-19   0.0139645849969436 
 obs   8-20   0.0198412698412698 
 obs   9-20   0.0111706349206349 
 obs   10-20   0.0137544547339882 
 error_value   9-11   0 
 error_value   10-11   0 
 error_value   7-12   0 
 error_value   9-12   0 
 error_value   7-13   0 
 error_value   8-13   0 
 error_value   9-13   0 
 error_value   8-14   0 
 error_value   9-14   0 
 error_value   10-14   0 
 error_value   6-15   0 
 error_value   6-16   0 
 error_value   7-16   0 
 error_value   8-17   0 
 error_value   9-17   0 
 error_value   8-18   0 
 error_value   9-18   0 
 error_value   9-19   0 
 error_value   10-19   0 
 error_value   11-19   0 
 error_value   8-20   0 
 error_value   9-20   0 
 error_value   10-20   0 
